--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
 
-  <div class="masthead">
+  <header class="masthead" role="banner">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery, etc.</h1>
     </div>
@@ -30,9 +30,9 @@
           <li><a href="#">Contact</a></li>
       </div>
     </div>
-  </div>
+  </header>
 
-  <div>
+  <main role="main" id="main">
     <div class="about push" id="about">
       <div class="embed embed-24by10">
         <img class="embed-item" src="images/shrbs.jpg" alt="">
@@ -45,26 +45,26 @@
         </div>
     </div>
 
-    <div>
+    <div id="products">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">Products</h1>
         <p class="mega max-length">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jpg">
+            <img class="img-flex push" src="images/shrub-1.jpg" alt="" aria-describedat="#grassy-shrubs">
             <div class="gutter-1-4" id="grassy-shrubs">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub 2.jpg">
+            <img class="img-flex push" src="images/shrub 2.jpg" aria-describedat="#shrubs-with-laurels">
             <div class="gutter-1-4" id="shrubs-with-laurels">
               <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg">
+            <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-describedat="#two-level-shrub">
             <div class="gutter-1-4" id="two-level-shrub">
               <h1 class="mega push-0">Two-level shrubbery</h1>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <div class="news pad-t pad-b">
+    <div class="news pad-t pad-b" id="news">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">News</h1>
         <p class="mega max-length">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
@@ -129,7 +129,7 @@
         </ol>
       </div>
 
-    <div class="contact pad-t pad-b">
+    <div class="contact pad-t pad-b" id="contact">
       <div class="wrapper">
         <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
         <p class="mega max-length gutter-1-2">We want… a shrubbery!</p>
@@ -159,11 +159,13 @@
       </div>
     </div>
 
-  <div class="footer pad-t-1-2 pad-b-1-2">
-    <div class="wrapper gutter-1-2">
-      <p class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</p>
-    </div>
-  </div>
+    <footer role="contentinfo">
+      <div class="footer pad-t-1-2 pad-b-1-2">
+        <div class="wrapper gutter-1-2">
+          <p class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</p>
+        </div>
+      </div>
+    </footer>
 
 </body>
 </html>
