--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li><a href="#">Prices</a></li>
           <li><a href="#">News</a></li>
           <li><a href="#">Contact</a></li>
+        </ol>
       </div>
     </div>
   </header>
@@ -43,6 +44,7 @@
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
+      </div>
     </div>
 
     <div id="products">
@@ -55,9 +57,10 @@
             <div class="gutter-1-4" id="grassy-shrubs">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
+            </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub 2.jpg" aria-describedat="#shrubs-with-laurels">
+            <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-describedat="#shrubs-with-laurels">
             <div class="gutter-1-4" id="shrubs-with-laurels">
               <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
@@ -128,6 +131,7 @@
           </li>
         </ol>
       </div>
+    </div>
 
     <div class="contact pad-t pad-b" id="contact">
       <div class="wrapper">
@@ -158,14 +162,15 @@
         </form>
       </div>
     </div>
+  </main>
 
-    <footer role="contentinfo">
-      <div class="footer pad-t-1-2 pad-b-1-2">
-        <div class="wrapper gutter-1-2">
-          <p class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</p>
-        </div>
+  <footer role="contentinfo">
+    <div class="footer pad-t-1-2 pad-b-1-2">
+      <div class="wrapper gutter-1-2">
+        <p class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</p>
       </div>
-    </footer>
+    </div>
+  </footer>
 
 </body>
 </html>
