--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <html lang="en">
+  <meta charset="UTF-8">
   <title>Accessibility fixer-upper</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
@@ -20,7 +22,7 @@
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery, etc.</h1>
     </div>
-    <div class="nav">
+    <nav class="navigation">
       <div class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0">
           <li><a href="#">About</a></li>
@@ -30,7 +32,7 @@
           <li><a href="#">Contact</a></li>
         </ol>
       </div>
-    </div>
+    </nav>
   </header>
 
   <main role="main" id="main">
@@ -49,27 +51,27 @@
 
     <div id="products">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">Products</h1>
+        <h2 class="push-0 color-brand-dark">Products</h2>
         <p class="mega max-length">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-1.jpg" alt="" aria-describedat="#grassy-shrubs">
             <div class="gutter-1-4" id="grassy-shrubs">
-              <h1 class="mega push-0">Grassy shrubs</h1>
+              <h2 class="mega push-0">Grassy shrubs</h2>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-describedat="#shrubs-with-laurels">
             <div class="gutter-1-4" id="shrubs-with-laurels">
-              <h1 class="mega push-0">Shrubs with laurels</h1>
+              <h2 class="mega push-0">Shrubs with laurels</h2>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-describedat="#two-level-shrub">
             <div class="gutter-1-4" id="two-level-shrub">
-              <h1 class="mega push-0">Two-level shrubbery</h1>
+              <h2 class="mega push-0">Two-level shrubbery</h2>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
           </li>
@@ -79,7 +81,7 @@
 
     <div class="prices pad-t pad-b">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">Prices</h1>
+        <h3 class="push-0 color-brand-dark">Prices</h3>
         <span class="mega max-length">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
@@ -113,7 +115,7 @@
 
     <div class="news pad-t pad-b" id="news">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">News</h1>
+        <h3 class="push-0 color-brand-dark">News</h3>
         <p class="mega max-length">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
 
         <ol class="list-group">
@@ -135,7 +137,7 @@
 
     <div class="contact pad-t pad-b" id="contact">
       <div class="wrapper">
-        <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
+        <h3 class="push-0 color-brand-dark gutter-1-2">Contact</h3>
         <p class="mega max-length gutter-1-2">We want… a shrubbery!</p>
 
         <form class="grid" method="post">
