--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-ca">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Accessibility fixer-upper</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
@@ -37,12 +37,12 @@
   <main role="main" id="main">
     <div class="about push" id="about">
       <div class="embed embed-24by10">
-        <img class="embed-item" src="images/shrbs.jpg" alt="">
+        <img class="embed-item" src="images/shrubs.jpg" alt="">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
           <h2 class="push-0">About</h2>
-          <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
+          <p class="mega push-0"><strong>Is there anywhere in this town where we could buy a shrubbery!?</strong></p>
           <p class="mega push-0 max-length">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
       </div>
@@ -55,22 +55,22 @@
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-1.jpg" alt="" aria-describedat="#grassy-shrubs">
-            <div class="gutter-1-4" id="grassy-shrubs">
-              <h2 class="mega push-0">Grassy shrubs</h2>
+            <div class="gutter-1-4 push" id="grassy-shrubs">
+              <h3 class="mega push-0">Grassy shrubs</h3>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-describedat="#shrubs-with-laurels">
-            <div class="gutter-1-4" id="shrubs-with-laurels">
-              <h2 class="mega push-0">Shrubs with laurels</h2>
+            <div class="gutter-1-4 push" id="shrubs-with-laurels">
+              <h3 class="mega push-0">Shrubs with laurels</h3>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-describedat="#two-level-shrub">
-            <div class="gutter-1-4" id="two-level-shrub">
-              <h2 class="mega push-0">Two-level shrubbery</h2>
+            <div class="gutter-1-4 push" id="two-level-shrub">
+              <h3 class="mega push-0">Two-level shrubbery</h3>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
           </li>
@@ -80,77 +80,82 @@
 
     <section class="prices pad-t pad-b" id="prices">
       <div class="wrapper gutter-1-2">
-        <h3 class="push-0 color-brand-dark">Prices</h3>
+        <h2 class="push-0 color-brand-dark">Prices</h2>
         <span class="mega max-length">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
-          <tr>
-            <th scope="col">&nbsp;</th>
-            <th scope="col">Small</th>
-            <th scope="col">Medium</th>
-            <th scope="col">Large</th>
-          </tr>
-          <tr>
-          <th scope="row">Grassy shrubs</th>
-            <td>$10</td>
-            <td>$20</td>
-            <td>$30</td>
-          </tr>
-          <tr>
-            <th scope="row">Shrubs with laurels</th>
-            <td>$40</td>
-            <td>$70</td>
-            <td>$100</td>
-          </tr>
-          <tr>
-            <th scope="row">Two-level shrubbery</th>
-            <td>$50</td>
-            <td>$70</td>
-            <td>$90</td>
-          </tr>
+          <caption class="pad-t">Prices for small, medium and large shrubberies</caption>
+          <thead>
+            <tr>
+              <th scope="col">&nbsp;</th>
+              <th scope="col">Small</th>
+              <th scope="col">Medium</th>
+              <th scope="col">Large</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Grassy shrubs</th>
+              <td>$10</td>
+              <td>$20</td>
+              <td>$30</td>
+            </tr>
+            <tr>
+              <th scope="row">Shrubs with laurels</th>
+              <td>$40</td>
+              <td>$70</td>
+              <td>$100</td>
+            </tr>
+            <tr>
+              <th scope="row">Two-level shrubbery</th>
+              <td>$50</td>
+              <td>$70</td>
+              <td>$90</td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </section>
 
-    <div class="news pad-t pad-b" id="news">
+    <section class="news pad-t pad-b" id="news">
       <div class="wrapper gutter-1-2">
-        <h3 class="push-0 color-brand-dark">News</h3>
+        <h2 class="push-0 color-brand-dark">News</h2>
         <p class="mega max-length">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
 
         <ol class="list-group">
           <li class="push">
-            <h3 class="push-0"><a href="section#news">What makes a good shrubbery?</a></h3>
-            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#">Read&nbsp;more…</a></p>
+            <h3 class="push-0"><a href="#">What makes a good shrubbery?</a></h3>
+            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#" aria-label="Read more">Read&nbsp;more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Shrubbery recycling</a></h3>
-            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a href="#">Read&nbsp;more…</a></p>
+            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a href="#" aria-label="Read more">Read&nbsp;more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Greens of any kind!</a></h3>
-            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#">Read&nbsp;more…</a></p>
+            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#" aria-label="Read more">Read&nbsp;more…</a></p>
           </li>
         </ol>
       </div>
-    </div>
+    </section>
 
-    <div class="contact pad-t pad-b" id="contact">
+    <section class="contact pad-t pad-b" id="contact">
       <div class="wrapper">
-        <h3 class="push-0 color-brand-dark gutter-1-2">Contact</h3>
+        <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h2>
         <p class="mega max-length gutter-1-2">We want… a shrubbery!</p>
 
         <form class="grid" method="post">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Your name</span>
-            <input>
+            <label class="push-1-8" for="name">Your name</label>
+            <input id="name">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">E-mail address</span>
-            <input>
+            <label class="push-1-8" for="email">E-mail address</label>
+            <input id="email" type="email">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Type of shrubbery</span>
-            <select>
+            <label class="push-1-8" for="type">Type of shrubbery</label>
+            <select id="type">
               <option>Two-level shrubbery</option>
               <option>Small shrubbery</option>
               <option>Shrubbery with laurels</option>
@@ -162,16 +167,17 @@
           </div>
         </form>
       </div>
-    </div>
-  </main>
+    </section>
 
-  <footer role="contentinfo">
-    <div class="footer pad-t-1-2 pad-b-1-2">
-      <div class="wrapper gutter-1-2">
-        <p class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</p>
+    <footer role="contentinfo">
+      <div class="footer pad-t-1-2 pad-b-1-2">
+        <div class="wrapper gutter-1-2">
+          <p class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</p>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+
+  </main>
 
 </body>
 </html>
